# sklearn-raster

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: abbreviations.md  mkdocs.yml  requirements.txt
docs/pages/: contributing.md  installation.md
docs/pages/api/: feature_array_estimator.md  wrap.md
docs/pages/api/datasets/: swo_ecoplot.md  synthesize_feature_array.md
docs/pages/css/: extra.css
docs/pages/guide/: compatible_estimators.md  getting_started.md  metadata.md  performance_tips.md  raster_formats.md  related_packages.md
docs/pages/tutorials/: dimensionality_reduction.ipynb  supervised_classification_and_regression.ipynb  unsupervised_clustering.ipynb
src/sklearn_raster/: __init__.py  estimator.py  features.py  image.py  types.py  ufunc.py
src/sklearn_raster/datasets/: _base.py  synthetic.py
src/sklearn_raster/ufunc/: __init__.py  _base.py  _meta.py
src/sklearn_raster/utils/: decorators.py  estimator.py  features.py  image.py  ufunc.py  wrapper.py
src/sknnr_spatial/: __init__.py  estimator.py  image.py  predict.py  preprocessing.py  types.py  wrapper.py
src/sknnr_spatial/datasets/: __init__.py  _base.py
src/sknnr_spatial/datasets/data/swo_ecoplot/: annpre.tif  anntmp.tif  asptr.tif  augmaxt.tif  contpre.tif  cvpre.tif  decmint.tif  dem.tif  diftmp.tif  lat.tif  lon.tif  nbr.tif  prr.tif  slppct.tif  smrtmp.tif  smrtp.tif  tc1.tif  tc2.tif  tc3.tif  tpi450.tif
src/sknnr_spatial/image/: __init__.py  _base.py  _dask_backed.py  dataarray.py  dataset.py  ndarray.py
src/sknnr_spatial/utils/: estimator.py  image.py  wrapper.py
tests/: conftest.py  feature_utils.py  image_utils.py  raster_utils.py  test_datasets.py  test_estimator.py  test_features.py  test_image.py  test_images.py  test_predict.py  test_preprocessing.py  test_sknnr.py  test_ufunc.py  test_ufunc_meta.py  test_utils.py  test_wrapper.py
tests/test_datasets/: test_synthesize_classification_feature_array__999_0_0_1_1_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_1_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_1_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_1_shape1_9_as_array_.npz  test_synthesize_classification_feature_array__999_0_0_1_1_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_3_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_3_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_3_shape1_3_as_array_.npz  test_synthesize_classification_feature_array__999_0_0_1_3_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_0_1_3_shape1_9_as_array_.npz  test_synthesize_classification_feature_array__999_0_0_1_3_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_1_shape0_3_as_array_.npz  test_synthesize_classification_feature_array__999_0_1_0_1_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_1_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_1_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_1_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_3_shape0_3_as_array_.npz  test_synthesize_classification_feature_array__999_0_1_0_3_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_3_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_3_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_0_1_0_3_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_1_shape0_3_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_1_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_1_shape0_9_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_1_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_1_shape1_3_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_1_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_1_shape1_9_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_1_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_3_shape0_3_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_3_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_3_shape0_9_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_3_shape0_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_3_shape1_3_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_3_shape1_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_0_1_3_shape1_9_as_array_.npz  test_synthesize_classification_feature_array__999_50_0_1_3_shape1_9_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_1_0_1_shape0_3_as_array_.npz  test_synthesize_classification_feature_array__999_50_1_0_1_shape0_3_as_dataset_.nc  test_synthesize_classification_feature_array__999_50_1_0_1_shape0_9_as_array_.npz  (+72 more)
