[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sknnr-spatial"
dynamic = ["version"]
description = "Spatial raster prediction with scikit-learn kNN estimators."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aaron Zuspan", email = "aaron.zuspan@oregonstate.edu" },
    { name = "Matt Gregory", email = "matt.gregory@oregonstate.edu" }
]
keywords = []
dependencies = [
    "numpy",
    "dask[diagnostics,dataframe]",
    "scikit-learn",
    "typing-extensions",
]

[project.optional-dependencies]
datasets = [
    "sknnr",
    "xarray",
    "rioxarray", 
    "rasterio", 
    "pooch",
]
tutorials = [
    "sknnr-spatial[datasets]",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/lemma-osu/sknnr-spatial"

[tool.hatch.version]
path = "src/sknnr_spatial/__init__.py"

[tool.hatch.build]
exclude = ["src/sknnr_spatial/datasets/data/"]

[tool.hatch.build.targets.wheel]
packages = ["src/sknnr_spatial"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.envs.default]
dependencies = [
    "pre-commit",
    "ipykernel",
    "sknnr-spatial[datasets]",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "sknnr-spatial[datasets]",
]

[tool.hatch.envs.test.scripts]
all = "pytest . {args} --doctest-modules"
cov = "pytest . --cov=src/sknnr_spatial {args} --doctest-modules"

[tool.hatch.envs.test_matrix]
template = "test"

[[tool.hatch.envs.test_matrix.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve --config-file docs/mkdocs.yml"
build = "mkdocs build --config-file docs/mkdocs.yml"

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "I", "F", "B", "FA", "UP", "PT", "Q", "RET", "SIM", "PERF"]
isort.known-first-party = ["sknnr_spatial"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.report]
exclude_also = [
    # Ignore TYPE_CHECKING blocks
    "if TYPE_CHECKING:"
]