[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[project]
name = "sklearn-raster"
version = "0.1.0.dev2"
description = "Spatial raster prediction with scikit-learn estimators."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aaron Zuspan", email = "aaron.zuspan@oregonstate.edu" },
    { name = "Matt Gregory", email = "matt.gregory@oregonstate.edu" }
]
keywords = []
dependencies = [
    "numpy",
    "xarray",
    "dask",
    "scikit-learn",
]

[project.optional-dependencies]
datasets = [
    "sknnr",
    "rioxarray",
    "rasterio",
    "pooch",
]
tutorials = [
    "sklearn-raster[datasets]",
    "ipykernel",
    "matplotlib",
    "dask[diagnostics,distributed]",
]
test = [
    "sklearn-raster[datasets]",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "freezegun",
    "xarray-regressions",
]
docs = [
    "sklearn-raster[tutorials]",
    "mkdocs<2.0.0",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/lemma-osu/sklearn-raster"

[dependency-groups]
dev = [
    "sklearn-raster[test]",
    "sklearn-raster[docs]",
    "pre-commit",
    "poethepoet",
]

[tool.uv.build-backend]
source-exclude = ["src/sklearn_raster/datasets/data/**"]

[tool.poe.tasks]
_sync = "uv sync"
_pre-commit-install = "pre-commit install"
install = ["_sync", "_pre-commit-install"]
check = "pre-commit run --all-files"
test = "pytest --doctest-modules"
coverage = "pytest --cov=src/sklearn_raster --doctest-modules"
docs = "mkdocs serve --config-file docs/mkdocs.yml"

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "I", "F", "B", "FA", "UP", "PT", "Q", "RET", "SIM", "PERF", "TC"]
isort.known-first-party = ["sklearn_raster"]

[tool.coverage.report]
exclude_also = [
    # Ignore TYPE_CHECKING blocks from test coverage
    "if TYPE_CHECKING:"
]